<resources>
    <string name="image">image</string>
    <string name="prompt">PROMPT</string>
    <string name="warning">WARNING</string>
    <string name="switch_off">close</string>
    <string name="switch_open">open</string>
    <string name="delete">delete</string>
    <string name="remove">Remove</string>
    <string name="list_view_empty_no_apps">Apps and data can be backup</string>
    <string name="system">System</string>
    <string name="user">User App</string>
    <string name="auto_start_process_waiting">Processing…</string>
    <string name="auto_start_km">Powerful prohibit auto-startup</string>
    <string name="auto_start_enable_empty">Autostart Enable Empty</string>
    <string name="auto_start_disable_empty">Autostart Disable Empty</string>
    <string name="auto_start_km_title">Purify apps</string>
    <string name="auto_start_unit_kuan"> </string>
    <string name="auto_start_title">AutoStart</string>
    <string name="without_unreading_notify">Without Unreading Notify</string>
    <string name="auto_start_enabled_events_string">This %1$d situations will casue autostart</string>
    <string name="auto_start_enable_start">Autostart Enable</string>
    <string name="auto_start_disable_start">Autostart Disable</string>
    <string name="auto_start_enable_start_btn">Enable</string>
    <string name="auto_start_disable_start_btn">Disable</string>
    <string name="auto_start_suggest_allow">autostart suggest allow</string>
    <string name="auto_start_app">autostart app</string>
    <string name="auto_start_point">autostart point</string>
    <string name="auto_start_kinds">kinds</string>
    <string name="auto_start_items">items</string>
    <string name="backup_selected">Selected</string>
    <string name="backup_selected_num_format">%1$d/%2$d</string>
    <string name="uninstall_header_format_system_core">System Core App(%d)</string>
    <string name="sct_name_none">Bloatware</string>
    <string name="sct_name_system_core">System core app</string>
    <string name="sct_name_factory_soft">Manufacturers tool</string>
    <string name="sct_name_factory_cooperate">Account manage apps</string>
    <string name="sct_name_isp_soft">Customization apps</string>
    <string name="sct_name_isp_market">Manufacturers apps</string>
    <string name="sct_name_third_soft">Bloatware</string>
    <string name="sct_name_third_market">Bloatware</string>
    <string name="sct_name_google">Google apps</string>
    <string name="sct_name_force_system">System apps</string>
    <string name="sct_name_force_cautious">Customization apps</string>
    <string name="sct_name_force_suggest">Bloatware</string>
    <string name="sct_name_root_manager">Root manage tool</string>
    <string name="uninstall_suggestion">%1$d%% user have removed</string>
    <string name="application_info">App info</string>
    <string name="uninstall">Uninstall</string>
    <string name="unremovable">Unremovable</string>
    <string name="float_tip_choose_grant_root">Please choose“Allow”or“Grant”in root auth window</string>
    <string name="tab_preinstalled_software">Built-in</string>
    <string name="tab_personal_software">Personal</string>
    <string name="software_uninstalling_prompting_format">Removing（%1$d / %2$d）</string>
    <string name="software_recovering_prompting_format">Restoring（%1$d / %2$d）</string>
    <string name="completed">completed</string>
    <string name="need_su_prompt">Uninstall bloatware need Root access</string>
    <string name="allow_again">Authorize again</string>
    <string name="need_permission_prompt">Root required</string>
    <string name="recyclepage_header_title">Recycle</string>
    <string name="uninstall_app_default_description">NO Description</string>
    <string name="uninstall_app_version">Version：%1$s</string>
    <string name="uninstall_app_version_tag">Version：</string>
    <string name="uninstall_app_type_tag">Type：</string>
    <string name="uninstall_app_update_tag">Update time ：</string>
    <string name="uninstall_app_size_tag">Size(app)：</string>
    <string name="uninstall_app_data_size">Size(data)：</string>
    <string name="uninstall_app_source_dir">apk：</string>
    <string name="app_data_size_counting">Calculating</string>
    <string name="uninstall_checkbox_nomore_tips">No prompt</string>
    <string name="uninstall_promptbox_warning_tips">Removing system apps may cause system unstable, proceed with caution please</string>
    <string name="uninstall_promptbox_tile">Remove prompt</string>
    <string name="uninstall_tag_completely_remove">Remove</string>
    <string name="unistall_completely">Remove completely</string>
    <string name="uninstall_tag_recover">Restore</string>
    <string name="uninstall_recover_tips">Do you want restore selected system core module?</string>
    <string name="uninstall_complete_remove_tips">This app can not be restored after completely removing, proceed with caution please</string>
    <string name="recover_complete">Restore finished</string>
    <string name="uninstall_complete">Remove finished</string>
    <string name="loading">Loading</string>
    <string name="uninstall_suggestion_tips">Removing will casue system error, proceed with caution please</string>
    <string name="uninstall_warning_tips2">This is system core module, can not be removed</string>
    <string name="uninstall_warning_tips">Removing will casue system error, proceed with caution please</string>
    <string name="system_core_title">System core module</string>
    <string name="deep_optimization_cleaner_desc">Found %1$d bloatware</string>
    <string name="deep_optimization_cleaner_doing_desc">Removing %1$s</string>
    <string name="uninstall_optimizatinon_cleaner_before_result">"Remvoed&lt;font color='#0091ea'>%d&lt;/font>bloatwares"</string>
    <string name="uninstall_optimizatinon_cleaner_choose">"Selected&lt;font color='#0091ea'>%d&lt;/font>bloatwares"</string>
    <string name="deep_optimization_cleaner_result">Free up space</string>
    <string name="updata_label_now">App list update</string>
    <string name="updata_label_sucessful">App list update success</string>
    <string name="updata_label_failed">App list update failed, check net connection please</string>
    <string name="uninstalling_tips">Uninstalling</string>
    <string name="uninstall_recycle_tabinfo">Restorable bloatware：%1$d个</string>
    <string name="unistall_empty_info">Removed apps can be restored here</string>
    <string name="uninstall_confirm_num">OK( %d )</string>
    <string name="uninstall_confirm">OK</string>
    <string name="uninstall_sacan_software_exception">Scanning app list error</string>
    <string name="uninstall_close_dialog">Close</string>
    <string name="uninstall_optimization_no_item">No found bloatware</string>
    <string name="uninstall_optimization_pre_install">%d bloatware can be remove</string>
    <string name="uninstall_optimization_page_title">Select bloatware you want to remove</string>
    <string name="uninstall_restore_storage_unavailable">%s restore failed, storage space not enough</string>
    <string name="app_name">KingRoot</string>
    <string name="kinguser">KingRoot</string>
    <string name="kingroot">KingRoot</string>
    <string name="root_authorization_dialog_btn_allow">Allow</string>
    <string name="root_authorization_dialog_btn_deny">Deny</string>
    <string name="root_authorization_empty_tip">No authorization request</string>
    <string name="root_authorization_suggestion">(%1$d%% users allow)</string>
    <string name="root_authorization_allow">Allow</string>
    <string name="root_authorization_deny">Deny</string>
    <string name="root_authorization_ask">Prompt</string>
    <string name="root_authorization_suffix_toast_permission">to get Root permission</string>
    <string name="root_authorization_console_name">ADB Program</string>
    <string name="root_authorization_system_name">System Program</string>
    <string name="root_authorization_socket_file_cannot_rw">Access the file failed</string>
    <string name="root_authorization_use_descript_default">Used: an unknown use of root privilege, please choose carefully</string>
    <string name="root_authorization_use_descript">Used: %1$s</string>
    <string name="root_authorization_title_ask">%1$d app(s) prompt</string>
    <string name="root_authorization_title_allow">%1$d app(s) allow</string>
    <string name="root_authorization_title_deny">%1$d app(s) deny</string>
    <string name="unroot_warning">Remove Root authorization completely and return to unroot status, proceed?</string>
    <string name="unroot_dialog_title">In progress…</string>
    <string name="unroot_dialog_content">Removing Root permission, please wait.</string>
    <string name="unroot_backup_root_tips">Backup Root(Keep Backup)</string>
    <string name="version_update_btn_update">Update</string>
    <string name="version_update_btn_pause">Pause</string>
    <string name="version_update_btn_install">Install</string>
    <string name="version_update_update_checking">Checking for updates…</string>
    <string name="version_update_update_failed">Failed: please try it later</string>
    <string name="version_update_toast_latest_version">Already was the latest version</string>
    <string name="version_update_check_updating_background">Checking for updates, please wait.</string>
    <string name="version_update_updating_new_version">In progress…</string>
    <string name="version_update_ku_update_info">New version found</string>
    <string name="version_update_ku_update_bar_content">New version was found, recommend to update now.</string>
    <string name="version_update_auto_allow_prompt">Granted</string>
    <string name="version_update_auto_deny_prompt">Denied</string>
    <string name="version_update_hint_version">Version:</string>
    <string name="version_update_feature">"What's new:"</string>
    <string name="version_update_install_title">(Free flow)</string>
    <string name="permission_group_root_manager">RootManager Permissions</string>
    <string name="permission_group_desc_root_manager">Permissions for RootManager</string>
    <string name="permission_group_root_manager_request">RootManager Permissions Request</string>
    <string name="permission_group_desc_root_manager_request">Permissions for RootManager Request</string>
    <string name="permission_group_activity_called_request">Activity Called Permissions Request</string>
    <string name="permission_group_desc_activity_called_request">Permissions for RootManager Request</string>
    <string name="dialog_title_hint">Authorize management notified</string>
    <string name="dialog_title_prompt">Prompt</string>
    <string name="dialog_btn_i_know">OK</string>
    <string name="dialog_btn_clear">Clear</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_label_remember">"Don't ask again"</string>
    <string name="dialog_btn_next_time">Next time</string>
    <string name="dialog_btn_continue">Continue</string>
    <string name="new_feature_content">"WHAT'S NEW:
1. We are the first can root Android 6.0, enjoy it.
2. Upgrade Auto-start and Uninstall tool.
3. Enhance Root core, active protecting apps.
4. New software architecture, decrease RAM consume %45."</string>
    <string name="knox_forbid">Forbid KNOX</string>
    <string name="warn_prompt_content">In order to enhance system stability, KingRoot has deployed as a system app.</string>
    <string name="warn_prompt_link">unRoot help >></string>
    <string name="warn_prompt_ok">I Know</string>
    <string name="attribute_content_description_image">Image</string>
    <string name="repackage_warning_dangerous">Serious risk warning</string>
    <string name="repackage_warning_tip">Authorization manager has been tampered and fails to authorize safely,the system is in danger.</string>
    <string name="repackage_update_now">Re-download</string>
</resources>