<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/common_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/common_dialog_title_template" />
    <ScrollView android:background="@color/dialog_bg_km" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/dialog_secondary_text" android:textColor="@color/text_primary_color_km" android:gravity="left" android:id="@id/item_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginTop="18.0dip" android:layout_marginRight="18.0dip" android:layout_marginBottom="10.0dip" android:minWidth="360.0dip" android:text="@string/uninstall_promptbox_warning_tips" android:lineSpacingMultiplier="1.2" style="@style/text_secondary_style_km" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/common_dialog_title_style_km">
        <CheckBox android:id="@id/prompt_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginRight="@dimen/dialog_tile_icon_marginRight_km" android:button="@drawable/checkbox_square_selector" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:gravity="center" android:id="@id/prompt_checkbox_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/uninstall_checkbox_nomore_tips" android:layout_toRightOf="@id/prompt_checkbox" android:layout_centerVertical="true" style="@style/text_secondary_style_km" />
    </RelativeLayout>
    <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
    <View android:background="@color/dialog_bottom_line_km" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/linearLayoutButtons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip">
        <Button android:textSize="@dimen/dialog_btn_size_km" android:textColor="@color/btn_cancel_blue_color" android:id="@id/button_left" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dialog_btn_cancel" android:layout_weight="1.0" style="@style/common_dialog_button_style.left" />
        <ImageView android:id="@id/button_line" android:background="@drawable/dialog_btn_line_vertical" android:layout_width="1.0px" android:layout_height="fill_parent" android:contentDescription="@string/image" />
        <Button android:textSize="@dimen/dialog_btn_size_km" android:textColor="@color/btn_default_blue_color" android:id="@id/button_right" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dialog_btn_ok" android:layout_weight="1.0" style="@style/common_dialog_button_style.right" />
    </LinearLayout>
</LinearLayout>