<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dialog_bound_margin" android:layout_marginRight="@dimen/dialog_bound_margin" android:minWidth="@dimen/dialog_min_width"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/dialog_title_text_size" android:textColor="@color/text_primary_color" android:gravity="center_vertical" android:id="@id/item_title" android:background="@drawable/shape_dialog_common_title_bg" android:paddingLeft="@dimen/common_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/dialog_title_min_height" android:text="@string/app_name" />
    <View android:background="@color/common_divider" android:layout_width="fill_parent" android:layout_height="@dimen/common_divider_width" />
    <ScrollView android:background="@color/general_light_bg" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="@dimen/common_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="@dimen/dialog_min_width">
            <TextView android:textSize="@dimen/repackage_warning_content_text" android:textColor="@color/warning_yellow" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/repackage_warning_dangerous" android:drawableTop="@drawable/icon_warning" android:lineSpacingMultiplier="1.2" />
            <TextView android:textSize="@dimen/repackage_warning_sub_content_text" android:textColor="@color/warning_gray" android:gravity="center" android:id="@id/tip_content_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/repackage_warning_tip" android:lineSpacingMultiplier="1.2" />
        </LinearLayout>
    </ScrollView>
    <View android:background="@color/common_divider" android:layout_width="fill_parent" android:layout_height="@dimen/common_divider_width" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/linearLayoutButtons" android:layout_width="fill_parent" android:layout_height="@dimen/dialog_btn_min_height">
        <Button android:textSize="@dimen/dialog_btn_text_size" android:textColor="@color/dialog_normal_btn_text" android:id="@id/button_cancel" android:background="@drawable/selector_dialog_common_left_btn" android:nextFocusRight="@id/button_update" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dialog_btn_cancel" android:layout_weight="1.0" />
        <View android:background="@color/common_divider" android:layout_width="@dimen/common_divider_width" android:layout_height="fill_parent" />
        <Button android:textSize="@dimen/dialog_btn_text_size" android:textStyle="bold" android:textColor="@color/dialog_highlight_btn_text" android:id="@id/button_update" android:background="@drawable/selector_dialog_common_right_btn" android:nextFocusLeft="@id/button_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/repackage_update_now" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>