<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/common_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" style="@style/common_dialog_title_style_km">
        <ImageView android:id="@id/icon_title" android:background="@drawable/failture_uninstall_popwindow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dialog_tile_icon_marginRight_km" android:contentDescription="@string/image" />
        <TextView android:textSize="@dimen/text_title_size" android:id="@id/item_title" style="@style/text_primary_style_km" />
    </LinearLayout>
    <View android:background="@color/dialog_top_line" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:paddingTop="@dimen/dialog_padding_vertical" android:paddingBottom="@dimen/dialog_padding_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/common_dialog_title_style_km">
            <TextView android:textSize="@dimen/dialog_secondary_text" android:textColor="@color/text_primary_color_km" android:id="@id/item_content" style="@style/text_secondary_style" />
        </LinearLayout>
    </ScrollView>
    <View android:background="@color/dialog_bottom_line_km" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/linearLayoutButtons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip">
        <Button android:textSize="@dimen/text_primary_size" android:textColor="@color/btn_cancel_blue_color" android:id="@id/button_left" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dialog_btn_cancel" android:layout_weight="1.0" style="@style/common_dialog_button_style.left" />
        <ImageView android:id="@id/button_line" android:background="@drawable/dialog_btn_line_vertical" android:layout_width="1.0px" android:layout_height="fill_parent" android:contentDescription="@string/image" />
        <Button android:textSize="@dimen/text_primary_size" android:textColor="@color/btn_default_blue_color" android:id="@id/button_right" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dialog_btn_ok" android:layout_weight="1.0" style="@style/common_dialog_button_style.left" />
    </LinearLayout>
</LinearLayout>