<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/common_dialog_bg" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/title_view" android:background="@null" android:minHeight="0.0dip" style="@style/list_item_style_km">
        <ImageView android:id="@id/icon" android:layout_centerVertical="true" android:contentDescription="@android:string/unknownName" style="@style/list_item_icon_style_km" />
        <TextView android:id="@id/title" android:layout_toRightOf="@id/icon" style="@style/list_item_primary_title_style_km" />
        <TextView android:id="@id/subtitle" android:layout_marginTop="2.0dip" android:layout_toRightOf="@id/icon" android:layout_below="@id/title" style="@style/list_item_secondary_title_style_km" />
    </RelativeLayout>
    <ImageView android:background="@color/dialog_top_line" android:layout_width="fill_parent" android:layout_height="1.0px" android:contentDescription="@string/image" />
    <TextView android:textSize="@dimen/text_secondary_size" android:textColor="@color/text_secondary_color_km" android:id="@id/description" android:paddingLeft="@dimen/dialog_padding_horizontal" android:paddingTop="20.0dip" android:paddingRight="@dimen/dialog_padding_horizontal" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@android:string/unknownName" />
    <com.kingroot.common.uilib.TransparentListView android:id="@android:id/list" android:paddingLeft="@dimen/dialog_padding_horizontal" android:paddingRight="@dimen/dialog_padding_horizontal" android:layout_width="fill_parent" android:layout_height="100.0dip" android:listSelector="@drawable/transparent" android:divider="@null" android:dividerHeight="0.0dip" />
    <View android:background="@color/dialog_bottom_line_km" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="@dimen/dialog_padding_vertical" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/linearLayoutButtons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip">
        <Button android:id="@id/button_left" android:layout_width="0.0dip" android:text="@string/dialog_btn_cancel" android:layout_weight="1.0" style="@style/common_dialog_button_cancel_style" />
        <View android:id="@id/button_line" android:background="@drawable/dialog_btn_line_vertical" android:layout_width="1.0px" android:layout_height="fill_parent" android:contentDescription="@string/image" />
        <Button android:id="@id/button_right" android:layout_width="0.0dip" android:text="@string/dialog_btn_ok" android:layout_weight="1.0" style="@style/common_dialog_button_style.right" />
    </LinearLayout>
</LinearLayout>